# Langchain_7daychallenge

./: README.md  main.py  pyproject.toml
days/day1/: LCEL.ipynb
days/day2/: cache.db  notebook.ipynb  prompt.json  prompt.yaml
